# QuizLITE

./: CLAUDE.md  CMakeLists.txt  LICENSE  PLAN.md  README.md
.github/workflows/: build.yml
docs/: AUDIT-2026-06.md
